Fix attempt for a bug that appears on iphone, but not in devtools iphone, Changed spacing between elements

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -10,7 +10,7 @@ body{
     display:grid;
     width:100%;
     height:90vh;
-    grid-template-rows: 10vh 10vh 5vw 20vw 5vw 20vh auto 20vh 1vh 20vh 40vw 20vh auto;
+    grid-template-rows: 10vh 10vh 5vw 20vw 5vw 20vh auto 10vh 1vh 10vh 40vw 20vh auto;
     grid-template-columns: 1fr .25fr .75fr 1fr .75fr .25fr 1fr;
     margin-bottom:1vh;
 }
